2011-02-09  Stefan Bidigaray <stefanbidi@gmail.com>

	* configure:
	* configure.ac:
	* Headers/Additions/GNUstepBase/config.h.in:
	* Source/NSDateFormatter.m: ([-dateFormatFromTemplate:options:locale:])
	Fix completely broken method using unicode/udatpg.h.

2011-02-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSLocale.m: Fix  canonical identifiers to return the input
	string if no other value is found.  Refrain from putting nil locale
	identifier in dictionary.  Fix leak of components dictionary when
	returning an existing locale by id.

2011-02-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSConcretePointerFunctions.m: objects with weak memory should
	not be retained.

2011-02-03  Philippe Roussel <p.o.roussel@free.fr>

	* Source/NSPropertyList.m: Fix memory leaks.

2011-02-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSNetServices.h:
	* Source/GSMDNSNetServices.m:
	* Headers/Foundation/NSNetServices.h:
	Tweaks to get MDNS code to compile again.

2011-02-02  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSDateFormatter.m: ([-doesRelativeDateFormatting])
	([-setDoesRelativeDateFormatting:]) Implemented methods.

2011-02-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPointerArray.m: ([-allObjects]) implement missing method.

2011-01-29  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSCalendar.m: Handle current calendar updates.

2011-01-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Fix bug with notifications ... was not always
	sending them when a domain was modified.

2011-01-29  Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/Foundation/NSLocale.h: Use GS_EXPOSE(NSLocale).
	* Source/NSLocale.m: ([-autoupdatingCurrentLocale]) Handle locale
	updates.
	([-currentLocale]) Check Locale default for current user's locale.
	([-preferredLanguages]) Do not add same language multiple times.

2011-01-28  Stefan Bidigaray <stefanbidi@gmail.com>
